Bug fix dan tambah Info Content

--- a/app/src/main/res/layout-large/activity_video_potensi.xml
+++ b/app/src/main/res/layout-large/activity_video_potensi.xml
@@ -65,14 +65,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="814dp" />
+        app:layout_constraintGuide_end="935dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline47"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="194dp" />
+        app:layout_constraintGuide_begin="147dp" />
 
     <include
         layout="@layout/menu_atas"
@@ -86,9 +86,8 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ScrollView
-        android:layout_width="412dp"
-        android:layout_height="571dp"
-        android:weightSum="1"
+        android:layout_width="594dp"
+        android:layout_height="800dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -97,8 +96,8 @@
         app:layout_constraintVertical_bias="1.0">
 
         <RelativeLayout
-            android:layout_width="392dp"
-            android:layout_height="623dp">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
             <Button
                 android:id="@+id/btnNonton"
@@ -107,7 +106,7 @@
                 android:layout_below="@id/editTextTextMultiLine"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="profil"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -120,7 +119,7 @@
                 android:layout_below="@id/editTextTextMultiLine2"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="booklet"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -134,7 +133,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="inggris"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -148,7 +147,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sidat"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -162,7 +161,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="pameran"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -176,7 +175,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="gula"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -190,7 +189,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="tas"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -204,7 +203,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="asin"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -218,7 +217,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="stik"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -232,7 +231,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="nata"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -246,7 +245,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="batik"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -260,7 +259,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sale"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -274,7 +273,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="kerang"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -288,7 +287,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="tengiri"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -302,7 +301,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="rawa"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -316,7 +315,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="wedus"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -331,7 +330,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="semut"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -345,7 +344,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sapi"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -359,7 +358,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="payau"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -373,7 +372,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="gurame"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -387,7 +386,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sebutret"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -401,7 +400,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="hotspring"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -416,7 +415,7 @@
                 android:layout_alignParentBottom="false"
                 android:layout_marginTop="6dp"
                 android:layout_marginRight="3dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="bahari"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -430,7 +429,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="pantai"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -444,7 +443,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="oss"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -452,8 +451,8 @@
 
             <EditText
                 android:id="@+id/editTextTextMultiLine"
-                android:layout_width="168dp"
-                android:layout_height="69dp"
+                android:layout_width="364dp"
+                android:layout_height="59dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="7dp"
                 android:ems="10"
@@ -528,7 +527,8 @@
                 android:layout_below="@+id/btnNonton4"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="38dp"
                 android:layout_marginRight="7dp"
                 android:layout_toRightOf="@id/imageView21"
                 android:ems="10"
@@ -546,8 +546,9 @@
                 android:layout_below="@+id/btnNonton5"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginTop="20dp"
-                android:layout_marginRight="7dp"
+                android:layout_marginLeft="3dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="4dp"
                 android:layout_toRightOf="@id/imageView23"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -564,7 +565,8 @@
                 android:layout_below="@+id/btnNonton6"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginTop="20dp"
+                android:layout_marginLeft="1dp"
+                android:layout_marginTop="41dp"
                 android:layout_marginRight="7dp"
                 android:layout_toRightOf="@id/imageView23"
                 android:ems="10"
@@ -582,9 +584,9 @@
                 android:layout_below="@+id/btnNonton7"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="2dp"
-                android:layout_marginTop="47dp"
-                android:layout_marginRight="5dp"
+                android:layout_marginLeft="0dp"
+                android:layout_marginTop="37dp"
+                android:layout_marginRight="7dp"
                 android:layout_toRightOf="@id/imageView24"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -620,9 +622,9 @@
                 android:layout_below="@+id/btnNonton9"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="11dp"
                 android:layout_toRightOf="@id/imageView26"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -640,7 +642,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginLeft="7dp"
-                android:layout_marginTop="20dp"
+                android:layout_marginTop="39dp"
                 android:layout_marginRight="8dp"
                 android:layout_toRightOf="@id/imageView25"
                 android:ems="10"
@@ -677,9 +679,9 @@
                 android:layout_below="@+id/btnSale"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="19dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="40dp"
+                android:layout_marginRight="11dp"
                 android:layout_toRightOf="@id/imageView25"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -696,9 +698,9 @@
                 android:layout_below="@+id/btnKerang"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="19dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="4dp"
+                android:layout_marginTop="46dp"
+                android:layout_marginRight="11dp"
                 android:layout_toRightOf="@id/imgTengiri"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -712,12 +714,12 @@
                 android:id="@+id/edtTxtRawaBendungan"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/btnTengiri"
+                android:layout_alignTop="@+id/imgRawaBendungan"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="19dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginTop="1dp"
+                android:layout_marginRight="10dp"
                 android:layout_toRightOf="@id/imgRawaBendungan"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -734,9 +736,9 @@
                 android:layout_below="@+id/btnRawaBendungan"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="19dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginTop="39dp"
+                android:layout_marginRight="13dp"
                 android:layout_toRightOf="@id/imgKambingKrPucung"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
@@ -905,9 +907,9 @@
                 android:layout_below="@+id/btnPantaiWidarapayung"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
-                android:layout_marginLeft="7dp"
-                android:layout_marginTop="13dp"
-                android:layout_marginRight="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="37dp"
+                android:layout_marginRight="7dp"
                 android:layout_toRightOf="@id/imgOss"
                 android:ems="10"
                 android:fontFamily="@font/arialn"
