--- a/app/src/main/res/layout/map_marker_info_window.xml
+++ b/app/src/main/res/layout/map_marker_info_window.xml
@@ -15,4 +15,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="#000"/>
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/ic_robot"/>
 </LinearLayout>
