--- a/app/src/main/res/layout-hdpi/activity_main.xml
+++ b/app/src/main/res/layout-hdpi/activity_main.xml
@@ -25,24 +25,23 @@
         android:background="@drawable/menu"
         android:onClick="potensi"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintEnd_toStartOf="@+id/button3"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView"
-        app:layout_constraintVertical_bias="0.059"
+        app:layout_constraintVertical_bias="0.058"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/button3"
         android:layout_width="@dimen/_120sdp"
         android:layout_height="@dimen/_120sdp"
-        android:layout_marginEnd="16dp"
         android:background="@drawable/menumenu"
         android:onClick="kecamatan"
         app:layout_constraintBottom_toBottomOf="@+id/btnUmum"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/btnUmum"
+        app:layout_constraintHorizontal_bias="0.901"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/btnUmum"
         app:layout_constraintVertical_bias="0.0" />
 
