--- a/app/src/main/res/layout-normal/activity_video_potensi.xml
+++ b/app/src/main/res/layout-normal/activity_video_potensi.xml
@@ -65,14 +65,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="814dp" />
+        app:layout_constraintGuide_end="757dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline47"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_begin="194dp" />
+        app:layout_constraintGuide_begin="150dp" />
 
     <include
         layout="@layout/menu_atas"
@@ -86,8 +86,8 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <ScrollView
-        android:layout_width="412dp"
-        android:layout_height="571dp"
+        android:layout_width="417dp"
+        android:layout_height="622dp"
         android:weightSum="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -107,7 +107,7 @@
                 android:layout_below="@id/editTextTextMultiLine"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="profil"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -120,7 +120,7 @@
                 android:layout_below="@id/editTextTextMultiLine2"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="booklet"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -134,7 +134,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="inggris"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -148,7 +148,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sidat"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -162,7 +162,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="pameran"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -176,7 +176,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="gula"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -190,7 +190,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="tas"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -204,7 +204,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="asin"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -218,7 +218,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="stik"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -232,7 +232,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="nata"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -246,7 +246,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="batik"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -260,7 +260,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sale"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -274,7 +274,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="kerang"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -288,7 +288,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="tengiri"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -302,7 +302,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="rawa"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -316,7 +316,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="wedus"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -331,7 +331,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="semut"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -345,7 +345,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sapi"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -359,7 +359,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="payau"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -373,7 +373,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="gurame"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -387,7 +387,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sebutret"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -401,7 +401,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="hotspring"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -416,7 +416,7 @@
                 android:layout_alignParentBottom="false"
                 android:layout_marginTop="6dp"
                 android:layout_marginRight="3dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="bahari"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -430,7 +430,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="pantai"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -444,7 +444,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="oss"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
