--- a/app/src/main/res/layout-small/activity_data_kecamatan.xml
+++ b/app/src/main/res/layout-small/activity_data_kecamatan.xml
@@ -9,14 +9,14 @@
 
     <include
         layout="@layout/menu_atas"
-        android:layout_width="111dp"
-        android:layout_height="36dp"
+        android:layout_width="53dp"
+        android:layout_height="26dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toStartOf="@+id/guideline17"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.021" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <ImageView
         android:id="@+id/imageView8"
@@ -76,20 +76,17 @@
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="159dp"
-        android:layout_height="22dp"
+        android:layout_width="94dp"
+        android:layout_height="13dp"
         android:fontFamily="@font/arial"
         android:text="Pilih Potensi"
         android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline16"
-        app:layout_constraintEnd_toEndOf="@+id/txtPilihKecamatan"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/txtPilihKecamatan"
-        app:layout_constraintTop_toBottomOf="@+id/txtPilihKecamatan"
-        app:layout_constraintVertical_bias="0.202"
-        tools:ignore="HardcodedText" />
+
+        tools:ignore="HardcodedText"
+        tools:layout_editor_absoluteX="53dp"
+        tools:layout_editor_absoluteY="13dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline13"
@@ -129,35 +126,55 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="400dp"
-        android:layout_height="574dp"
+        android:layout_width="187dp"
+        android:layout_height="142dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline16"
         app:layout_constraintVertical_bias="0.0"
-        tools:context=".MapDataKecamatan" />
+        tools:context=".MapDataKecamatan">
+
+
+    </androidx.fragment.app.FragmentContainerView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabBack"
+        android:layout_width="30dp"
+        android:layout_height="25dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="utama"
+
+        app:backgroundTint="@color/aqua"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/guideline17"
+        app:layout_constraintHorizontal_bias="0.029"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline16"
+        app:layout_constraintVertical_bias="0.991"
+        app:srcCompat="@drawable/back" />
 
     <Button
         android:id="@+id/btnPeta"
-        android:layout_width="148dp"
-        android:layout_height="32dp"
+        android:layout_width="54dp"
+        android:layout_height="14dp"
         android:background="@color/goldenrot"
         android:text="Tampilkan Peta"
         android:textColor="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/map"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.885"
         app:layout_constraintStart_toStartOf="@+id/textView2"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.74"
+        app:layout_constraintVertical_bias="1.0"
         tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/btnPdf"
-        android:layout_width="145dp"
-        android:layout_height="32dp"
+        android:layout_width="83dp"
+        android:layout_height="14dp"
         android:background="@color/goldenrot"
         android:text="Data Detail"
         android:textColor="@color/black"
@@ -169,20 +186,4 @@
         app:layout_constraintVertical_bias="0.0"
         tools:ignore="HardcodedText" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fabBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="514dp"
-        android:clickable="true"
-        android:onClick="utama"
-        app:backgroundTint="@color/aqua"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline17"
-        app:layout_constraintHorizontal_bias="0.069"
-        app:layout_constraintStart_toStartOf="@+id/guideline13"
-        app:layout_constraintTop_toTopOf="@+id/map"
-        app:layout_constraintVertical_bias="0.384"
-        app:srcCompat="@drawable/back"
-        android:focusable="true" />
 </androidx.constraintlayout.widget.ConstraintLayout>
