--- a/app/src/main/res/layout-xlarge/activity_data_kecamatan.xml
+++ b/app/src/main/res/layout-xlarge/activity_data_kecamatan.xml
@@ -20,36 +20,32 @@
 
     <ImageView
         android:id="@+id/imageView8"
-        android:layout_width="258dp"
-        android:layout_height="31dp"
-        android:layout_marginStart="44dp"
+        android:layout_width="295dp"
+        android:layout_height="53dp"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="100dp"
         app:layout_constraintBottom_toTopOf="@+id/map"
-        app:layout_constraintEnd_toStartOf="@+id/guideline14"
-        app:layout_constraintHorizontal_bias="0.304"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.25"
+        app:layout_constraintVertical_bias="0.217"
         app:srcCompat="@drawable/apik"
         tools:ignore="ContentDescription" />
 
     <Spinner
         android:id="@+id/spKecamatan"
-        android:layout_width="@dimen/_157sdp"
-        android:layout_height="@dimen/_27sdp"
-        android:layout_marginStart="36dp"
+        android:layout_width="@dimen/_130sdp"
+        android:layout_height="@dimen/_35sdp"
+
         app:layout_constraintBottom_toBottomOf="@+id/txtPilihKecamatan"
-        app:layout_constraintEnd_toStartOf="@+id/guideline14"
-        app:layout_constraintHorizontal_bias="0.923"
         app:layout_constraintStart_toEndOf="@+id/txtPilihKecamatan"
-        app:layout_constraintTop_toTopOf="@+id/txtPilihKecamatan"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="@+id/txtPilihKecamatan" />
 
     <Spinner
         android:id="@+id/spPotensi"
-        android:layout_width="@dimen/_157sdp"
-        android:layout_height="@dimen/_27sdp"
+        android:layout_width="@dimen/_130sdp"
+        android:layout_height="@dimen/_35sdp"
         app:layout_constraintBottom_toBottomOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="@+id/spKecamatan"
         app:layout_constraintHorizontal_bias="0.0"
@@ -59,30 +55,30 @@
 
     <TextView
         android:id="@+id/txtPilihKecamatan"
-        android:layout_width="159dp"
-        android:layout_height="22dp"
+        android:layout_width="424dp"
+        android:layout_height="66dp"
         android:fontFamily="@font/arial"
         android:text="Pilih Kecamatan"
         android:textAlignment="textStart"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/_20sdp"
         app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toStartOf="@+id/guideline17"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.901"
         app:layout_constraintStart_toStartOf="@+id/guideline13"
         app:layout_constraintTop_toTopOf="@+id/guideline15"
-        app:layout_constraintVertical_bias="0.639"
+        app:layout_constraintVertical_bias="0.466"
         tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView2"
-        android:layout_width="159dp"
-        android:layout_height="22dp"
+        android:layout_width="424dp"
+        android:layout_height="66dp"
         android:fontFamily="@font/arial"
         android:text="Pilih Potensi"
         android:textAlignment="textStart"
         android:textColor="@color/black"
-        android:textSize="18sp"
+        android:textSize="@dimen/_20sdp"
         app:layout_constraintBottom_toTopOf="@+id/guideline16"
         app:layout_constraintEnd_toEndOf="@+id/txtPilihKecamatan"
         app:layout_constraintHorizontal_bias="0.0"
@@ -110,14 +106,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_end="764dp" />
+        app:layout_constraintGuide_end="1210dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.25" />
+        app:layout_constraintGuide_begin="450dp" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline17"
@@ -129,20 +125,19 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="400dp"
-        android:layout_height="574dp"
+        android:layout_width="813dp"
+        android:layout_height="776dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.473"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline16"
-        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
         tools:context=".MapDataKecamatan" />
 
     <Button
         android:id="@+id/btnPeta"
-        android:layout_width="148dp"
-        android:layout_height="32dp"
+        android:layout_width="255dp"
+        android:layout_height="55dp"
         android:background="@color/goldenrot"
         android:text="Tampilkan Peta"
         android:textColor="@color/black"
@@ -156,8 +151,8 @@
 
     <Button
         android:id="@+id/btnPdf"
-        android:layout_width="145dp"
-        android:layout_height="32dp"
+        android:layout_width="254dp"
+        android:layout_height="64dp"
         android:background="@color/goldenrot"
         android:text="Data Detail"
         android:textColor="@color/black"
@@ -171,18 +166,18 @@
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabBack"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="514dp"
+        android:layout_width="119dp"
+        android:layout_height="95dp"
         android:clickable="true"
+        android:focusable="true"
         android:onClick="utama"
         app:backgroundTint="@color/aqua"
+
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/guideline17"
-        app:layout_constraintHorizontal_bias="0.069"
-        app:layout_constraintStart_toStartOf="@+id/guideline13"
-        app:layout_constraintTop_toTopOf="@+id/map"
-        app:layout_constraintVertical_bias="0.384"
-        app:srcCompat="@drawable/back"
-        android:focusable="true" />
+        app:layout_constraintEnd_toStartOf="@+id/guideline13"
+        app:layout_constraintHorizontal_bias="0.058"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline16"
+        app:layout_constraintVertical_bias="0.954"
+        app:srcCompat="@drawable/back" />
 </androidx.constraintlayout.widget.ConstraintLayout>
