--- a/app/src/main/res/layout-xxxhdpi/activity_video_potensi.xml
+++ b/app/src/main/res/layout-xxxhdpi/activity_video_potensi.xml
@@ -107,7 +107,7 @@
                 android:layout_below="@id/editTextTextMultiLine"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="profil"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -120,7 +120,7 @@
                 android:layout_below="@id/editTextTextMultiLine2"
                 android:layout_alignParentRight="true"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="booklet"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -134,7 +134,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="inggris"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -148,7 +148,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sidat"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -162,7 +162,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="pameran"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -176,7 +176,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="gula"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -190,7 +190,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="tas"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -204,7 +204,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="asin"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -218,7 +218,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="stik"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -232,7 +232,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="nata"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -246,7 +246,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="batik"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -260,7 +260,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sale"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -274,7 +274,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="kerang"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -288,7 +288,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="tengiri"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -302,7 +302,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="rawa"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -316,7 +316,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="wedus"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -331,7 +331,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="semut"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -345,7 +345,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sapi"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -359,7 +359,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="payau"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -373,7 +373,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="gurame"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -387,7 +387,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="sebutret"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -401,7 +401,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="hotspring"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -416,7 +416,7 @@
                 android:layout_alignParentBottom="false"
                 android:layout_marginTop="6dp"
                 android:layout_marginRight="3dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="bahari"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -430,7 +430,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="pantai"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -444,7 +444,7 @@
                 android:layout_alignParentRight="true"
                 android:layout_alignParentBottom="false"
                 android:layout_marginRight="7dp"
-                android:background="@color/goldenrot"
+                android:background="@color/darkturquoise"
                 android:onClick="oss"
                 android:text="Lihat Video"
                 android:textColor="@color/black"
@@ -462,7 +462,7 @@
                 android:gravity="start|top"
                 android:importantForAutofill="no"
                 android:inputType="textMultiLine"
-                android:text="Visualisasi Profil Kabpupaten Cilacap"
+                android:text="Visualisasi Profil Kabupaten Cilacap"
                 android:textColor="@color/black"
                 tools:ignore="HardcodedText" />
 
