--- a/app/src/main/res/layout/activity_potensi_umum.xml
+++ b/app/src/main/res/layout/activity_potensi_umum.xml
@@ -38,10 +38,11 @@
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/map"
         android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="444dp"
-        android:layout_height="706dp"
+        android:layout_width="394dp"
+        android:layout_height="704dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.058"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="1.0"
