--- a/app/src/main/res/layout/info_content.xml
+++ b/app/src/main/res/layout/info_content.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal">
@@ -9,22 +10,26 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <ImageView
+            android:id="@+id/ivGambarMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:adjustViewBounds="true"
-            android:src="@drawable/ic_robot"/>
+            android:src="@drawable/ic_robot"
+            tools:ignore="ContentDescription"/>
         <TextView
-            android:id="@+id/title"
+            android:id="@+id/tvTitleMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12dp"
+            android:textSize="12sp"
             android:textStyle="bold"/>
         <TextView
-            android:id="@+id/snippet"
+            android:id="@+id/tvSnipetMap"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="10dp"/>
+            android:textSize="10sp"
+            android:textStyle="bold"
+            tools:ignore="SmallSp" />
     </LinearLayout>
 
 </LinearLayout>
